--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.25.0",
+    "@clerk/clerk-sdk-node": "^4.13.23",
+    "@clerk/nextjs": "^6.25.4",
     "@hookform/resolvers": "^5.1.1",
     "@jsmastery/utils": "^1.0.2",
     "@radix-ui/react-accordion": "^1.2.11",
@@ -40,17 +41,24 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@sentry/nextjs": "^9.38.0",
     "@supabase/supabase-js": "^2.51.0",
+    "@types/uuid": "^10.0.0",
     "@vapi-ai/web": "^2.3.8",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "express": "^5.1.0",
+    "framer-motion": "^12.23.6",
     "input-otp": "^1.4.2",
+    "install": "^0.13.0",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.525.0",
     "next": "15.4.1",
     "next-themes": "^0.4.6",
+    "npm": "^11.4.2",
+    "razorpay": "^2.9.6",
     "react": "19.1.0",
     "react-day-picker": "^9.8.0",
     "react-dom": "19.1.0",
@@ -59,6 +67,7 @@
     "recharts": "^2.15.4",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
+    "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "zod": "^4.0.5"
   },
