--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "@clerk/clerk-sdk-node": "^5.1.6",
-    "@clerk/nextjs": "^6.25.4",
+    "@clerk/nextjs": "^6.28.1",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.1.1",
     "@jsmastery/utils": "^1.0.2",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/core": "^2.0.1",
+    "@opentelemetry/instrumentation": "^0.203.0",
+    "@opentelemetry/sdk-node": "^0.203.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -43,6 +48,7 @@
     "@supabase/supabase-js": "^2.51.0",
     "@types/uuid": "^10.0.0",
     "@vapi-ai/web": "^2.3.8",
+    "axios": "^1.11.0",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -50,6 +56,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "express": "^5.1.0",
+    "formidable": "^3.5.4",
     "framer-motion": "^12.23.6",
     "input-otp": "^1.4.2",
     "install": "^0.13.0",
@@ -58,6 +65,7 @@
     "next": "15.4.1",
     "next-themes": "^0.4.6",
     "npm": "^11.4.2",
+    "openai": "^5.11.0",
     "razorpay": "^2.9.6",
     "react": "19.1.0",
     "react-day-picker": "^9.8.0",
