--- a/package.json
+++ b/package.json
@@ -46,6 +46,21 @@
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@supabase/supabase-js": "^2.51.0",
+    "@tiptap/extension-blockquote": "^3.4.1",
+    "@tiptap/extension-bold": "^3.4.1",
+    "@tiptap/extension-bullet-list": "^3.4.1",
+    "@tiptap/extension-code-block": "^3.4.1",
+    "@tiptap/extension-heading": "^3.4.1",
+    "@tiptap/extension-image": "^3.4.1",
+    "@tiptap/extension-italic": "^3.4.1",
+    "@tiptap/extension-link": "^3.4.1",
+    "@tiptap/extension-list": "^3.4.1",
+    "@tiptap/extension-list-item": "^3.4.1",
+    "@tiptap/extension-ordered-list": "^3.4.1",
+    "@tiptap/extension-strike": "^3.4.1",
+    "@tiptap/extension-underline": "^3.4.1",
+    "@tiptap/react": "^3.4.1",
+    "@tiptap/starter-kit": "^3.4.1",
     "@types/uuid": "^10.0.0",
     "@vapi-ai/web": "^2.3.8",
     "axios": "^1.11.0",
@@ -66,10 +81,11 @@
     "next-themes": "^0.4.6",
     "npm": "^11.4.2",
     "openai": "^5.11.0",
+    "quill": "^2.0.3",
     "razorpay": "^2.9.6",
-    "react": "19.1.0",
+    "react": "^18.3.1",
     "react-day-picker": "^9.8.0",
-    "react-dom": "19.1.0",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^3.0.3",
     "recharts": "^2.15.4",
